--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build:prod": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "lint": "eslint . --ext .ts --ext .html",
     "lint:fix": "eslint . --ext .ts --ext .html --fix"
   },
@@ -37,7 +37,7 @@
     "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
-    "@types/jasmine": "~3.10.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
@@ -48,12 +48,9 @@
     "eslint-plugin-rxjs": "^5.0.2",
     "eslint-plugin-rxjs-angular": "^2.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "jest": "^27.5.0",
+    "jest-preset-angular": "^11.1.1",
+    "ts-jest": "^27.1.4",
     "typescript": "~4.5.2"
   }
 }
