--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "fast-xml-parser": "^4.0.8",
     "lodash.clonedeep": "^4.5.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
