--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "fast-xml-parser": "^4.0.8",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lodash.clonedeep": "^4.5.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.4.0",
@@ -40,6 +42,7 @@
     "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.4.1",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/node": "^16.11.7",
